--- a/notebooks_v1/03.05-Hierarchical-Indexing.ipynb
+++ b/notebooks_v1/03.05-Hierarchical-Indexing.ipynb
@@ -911,7 +911,7 @@
      "data": {
       "text/plain": [
        "MultiIndex(levels=[['a', 'b'], [1, 2]],\n",
-       "           labels=[[0, 0, 1, 1], [0, 1, 0, 1]])"
+       "           codes=[[0, 0, 1, 1], [0, 1, 0, 1]])"
       ]
      },
      "execution_count": 17,
